@@ -19,6 +19,22 @@
 @JIERI_WEEK: 
 @JIERI_LUNAR: 
 
+<!-- ##### STRUCT LUNARDate ##### -->
+<para>
+The LUNARDate struct contains only private fields and should not be used directly.
+</para>
+
+
+<!-- ##### ENUM LUNARDateError ##### -->
+<para>
+
+</para>
+
+@LUNAR_DATE_ERROR_INTERNAL: a internal error was found.
+@LUNAR_DATE_ERROR_DAY: the day is out of the range.
+@LUNAR_DATE_ERROR_YEAR: the year is out of the range.
+@LUNAR_DATE_ERROR_LEAP: the <parameter>isleap</parameter> parameter of lunar_date_set_lunar_date() is not corret.
+
 <!-- ##### FUNCTION lunar_date_get_bazi ##### -->
 <para>
 
